fix btn secondary button for dark mode

--- a/src/assets/styles/_tailwind.css
+++ b/src/assets/styles/_tailwind.css
@@ -31,7 +31,7 @@
     }
 
     .btn-secondary {
-        @apply font-medium select-none items-center shadow-sm px-2.5 py-1.5 rounded text-gray-700 dark:text-gray-100 bg-white dark:bg-backdrop-dark hover:bg-gray-50 border border-gray-300 hover:bg-gray-100 focus:outline-none text-base tracking-wide;
+        @apply font-medium select-none items-center shadow-sm px-2.5 py-1.5 rounded text-gray-700 dark:text-gray-100 bg-white dark:bg-backdrop-dark border border-gray-300 dark:border-gray-600 hover:bg-gray-100 dark:hover:border-gray-400 focus:outline-none text-base tracking-wide;
     }
 
     .btn-danger {
